# typar

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/typar/: __init__.py  example.py  implementation.py
