[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
  {name = "Yuxiang Wei", email = "ywei40@illinois.edu"},
]
description = "Fully-typed combinatorial parsing library in Python"
name = "typar"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.6"

[project.urls]
"Homepage" = "https://github.com/UniverseFly/typar"

[tool.setuptools.packages.find]
include = ["typar*"]
where = ["src"]

[tool.setuptools.package-data]
typar = ["py.typed"]

[tool.black]
include = '\.pyi?$'
line-length = 88
target-version = ["py310"]

[tool.isort]
line_length = 88
profile = "black"
skip_gitignore = true

[tool.mypy]
check_untyped_defs = true
# follow_imports = "silent"
# ignore_missing_imports = true
mypy_path = "src"
packages = ["typar"]
python_version = "3.10"
